# signalk-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: security.yml  test.yml  version-tag.yml
src/signalk_mcp/: __init__.py  client.py  server.py  tools.py
tests/: test_battery_display.py  test_battery_state.py  test_conversions_extended.py  test_depth_state.py  test_get_active_alarms.py  test_get_route.py  test_integration_signalk.py  test_list_paths.py  test_local_host_resolution.py  test_local_time.py  test_path_validation.py  test_read_sensor.py  test_route_shapes.py  test_server_dispatch.py  test_smoke.py  test_unit_conversion.py
