[project]
name = "signalk-mcp"
version = "0.1.0"
description = "MCP server exposing SignalK marine data as agent tools"
readme = "README.md"
authors = [
    { name = "Bryan Clark", email = "clarkbw@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
    "timezonefinder>=8.2.4",
    "websockets>=16.0",
]

[project.scripts]
signalk-mcp = "signalk_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
